[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name    = "builder"
version = "2.1.0"
license = {text = "Apache-2.0"}
description = "Home Assistant Python wheels builder."
authors = [
    {name = "The Home Assistant Authors", email = "hello@home-assistant.io"}
]
keywords = ["docker", "home-assistant"]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Topic :: Home Automation",
    "Development Status :: 5 - Production/Stable",
]
requires-python = ">=3.13.0"
dependencies = [
    "awesomeversion>=21.2.2",
    "click==8.3.0",
    "packaging==25.0",
    "pip==25.3",
    "requests==2.32.5",
    "setuptools==80.9.0",
    "wheel==0.46.1",
]

[dependency-groups]
cp = [
    "cffi==2.0.0",
    "cython==3.1.6",
    "numpy==2.3.3",
    "scikit-build==0.18.1",
]
dev = [
    "mypy==1.18.2",
    "prek==0.2.12",
    "pylint==4.0.2",
    "pylint-per-file-ignores==3.1.0",
    "pytest==8.4.2",
    "types-requests==2.32.4.20250913",
]

[project.urls]
"Homepage" = "https://home-assistant.io/"

[tool.setuptools.packages.find]
include = ["builder*"]

[tool.ruff.lint]
select = ["ALL"]

ignore = [
    "D203",   # Conflicts with other rules
    "D213",   # Conflicts with other rules

    "FBT001",  # Boolean-typed positional argument in function definition

    "T201",    # print found
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "D100",    # Missing docstring in public module
    "D103",    # Missing docstring in public function
    "D104",    # Missing docstring in public package

    "S101",    # Use of assert detected

    "SLF001",  # Private member accessed
]

[tool.ruff.lint.pylint]
max-args = 6


